fix category bar overlapping with challenges

--- a/src/app/pages/home-page/home-page.component.scss
+++ b/src/app/pages/home-page/home-page.component.scss
@@ -34,20 +34,14 @@ $category-bar-height: 40px;
 			color: #fff;
 		}
 
-		//Durch Stern-Icon ersetzen
 		.favorite-challenges {
 			margin-left: auto;
-			//border: 2px solid #fff;
-			//border-radius: 40px;
 			height: 30px;
 			width: 30px;
 		}
 
-		//Durch Uhr-Icon ersetzen
 		.running-challenges {
 			margin-left: 10px;
-			//border: 2px solid #fff;
-			//border-radius: 40px;
 			height: 40px;
 			width: 40px;
 		}
@@ -55,13 +49,13 @@ $category-bar-height: 40px;
 
 	.category-bar {
 		position: relative;
-		//height: $category-bar-height;
+		height: $category-bar-height;
 		background: #d1e4d9;
 		box-sizing: content-box;
 		overflow-y: scroll;
 		white-space: nowrap;
 		user-select: none;
-		margin-top: 2%;
+		margin-top: 15px;
 		border-radius: 40px 0 0 40px;
 		margin-left: 4%;
 
@@ -76,7 +70,7 @@ $category-bar-height: 40px;
 		.category {
 			display: inline-block;
 			font-size: 14px;
-			padding: 1.5% 3.5%;
+			padding: 10px 20px;
 			cursor: pointer;
 
 			// active für die gewählte Kategorie
@@ -91,7 +85,7 @@ $category-bar-height: 40px;
 
 .challenges {
 	position: relative;
-	margin-top: $app-bar-height + $category-bar-height + 25px;
+	margin-top: $app-bar-height + $category-bar-height + 30px;
 	margin-bottom: 70px + 25px;
 
 	.challenge {
